# Knights

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  DOCKER.md  Dockerfile  HANDOFF.md  README.md  conanfile.py  docker-compose.yml  out.html  tasks.md  tmp.txt  tmp_acceptor.cpp  tmp_find_status.txt  tmp_on_chat_send.txt  tmp_on_join.txt  tmp_on_join_full.txt  tmp_on_leave_block.txt  tmp_on_leave_full.txt  tmp_status_context.txt  vcpkg.json  verify_lb.py  verify_lc.py
client_gui/: AGENTS.md  CMakeLists.txt  README.md
client_gui/include/client/: client_app.hpp  gui_manager.hpp  net_client.hpp
client_gui/src/: client_app.cpp  gui_manager.cpp  main.cpp  net_client.cpp
core/: .CMakeLists.txt.swp  AGENTS.md  CMakeLists.txt  README.md
core/cmake/: server_coreConfig.cmake.in
core/include/: AGENTS.md
core/include/server/core/: JobQueue.hpp  MemoryPool.hpp  ThreadManager.hpp  acceptor.hpp  build_info.hpp  dispatcher.hpp  protocol.hpp  protocol_errors.hpp  runtime_metrics.hpp  session.hpp
core/include/server/wire/: codec.hpp
core/protocol/: system_opcodes.json
core/src/: AGENTS.md  runtime_metrics.cpp
core/src/app/: app_host.cpp
core/src/compression/: compressor.cpp
core/src/concurrent/: JobQueue.cpp  ThreadManager.cpp  job_queue.cpp  task_scheduler.cpp  thread_manager.cpp
core/src/config/: dotenv.cpp
core/src/memory/: MemoryPool.cpp  memory_pool.cpp
core/src/metrics/: http_server.cpp  metrics.cpp
core/src/net/: acceptor.cpp  connection.cpp  dispatcher.cpp  hive.cpp  listener.cpp  session.cpp
core/src/net/rudp/: ack_window.cpp  retransmission_queue.cpp  rudp_engine.cpp
core/src/plugin/: shared_library.cpp
core/src/scripting/: lua_runtime.cpp  lua_runtime_disabled.cpp  lua_sandbox.cpp  script_watcher.cpp
core/src/security/: admin_command_auth.cpp  cipher.cpp
core/src/state/: instance_registry.cpp
core/src/storage/: db_worker_pool.cpp
core/src/trace/: context.cpp
core/src/util/: crash_handler.cpp  log.cpp  paths.cpp  service_registry.cpp
devclient/: CMakeLists.txt  README.md
devclient/include/client/: net_client.hpp  store.hpp
devclient/include/client/app/: app_state.hpp  application.hpp  command_processor.hpp  network_router.hpp  state.hpp  ui_builder.hpp
devclient/src/: main.cpp  net_client.cpp  store.cpp
devclient/src/app/: app_state.cpp  application.cpp  command_processor.cpp  network_router.cpp  ui_builder.cpp
devclient/src/ui/: status_bar.cpp
gateway/: AGENTS.md  CMakeLists.txt  README.md
gateway/include/gateway/: gateway_app.hpp  gateway_connection.hpp  resilience_controls.hpp  rudp_rollout_policy.hpp  session_directory.hpp  udp_bind_abuse_guard.hpp  udp_sequenced_metrics.hpp
gateway/src/: gateway_app.cpp  gateway_connection.cpp  main.cpp  registry_backend_factory.cpp  session_directory.cpp
load_balancer/: CMakeLists.txt  README.md
load_balancer/include/load_balancer/: backend_refresher.hpp  backend_registry.hpp  config.hpp  grpc_service_impl.hpp  load_balancer_app.hpp  session_directory.hpp
load_balancer/src/: backend_refresher.cpp  backend_registry.cpp  grpc_service_impl.cpp  load_balancer_app.cpp  main.cpp  session_directory.cpp
proto/: CMakeLists.txt  gateway_lb.proto  wire.proto
server/: AGENTS.md  CMakeLists.txt  README.md
server/include/server/app/: bootstrap.hpp  (+4 more)
server/plugins/: CMakeLists.txt  chat_hook_sample.cpp  chat_hook_tag.cpp
server/protocol/: game_opcodes.json
server/scripts/: admin_commands.lua  on_join_policy.lua  on_login_welcome.lua  on_login_welcome.script.json
server/scripts/templates/: script_manifest.template.json
server/src/: main.cpp
server/src/app/: bootstrap.cpp  config.cpp  core_internal_adapter.cpp  metrics_server.cpp  router.cpp
server/src/chat/: chat_hook_plugin_chain.cpp  chat_hook_plugin_chain.hpp  chat_hook_plugin_manager.cpp  chat_hook_plugin_manager.hpp  chat_service.cpp  chat_service_core.cpp  handlers_chat.cpp  handlers_join.cpp  handlers_leave.cpp  handlers_login.cpp  handlers_ping.cpp  session_events.cpp
server/src/scripting/: chat_lua_bindings.cpp
server/src/state/: instance_registry.cpp  redis_backend_factory.cpp
tests/: AGENTS.md  CMakeLists.txt  chat_history_tests.cpp  db_worker_pool_tests.cpp  gateway_session_directory_tests.cpp  job_thread_manager_tests.cpp  state_instance_registry_tests.cpp  task_scheduler_tests.cpp  test_storage_basic.cpp
tests/core/: plugin_runtime_invalid.cpp  plugin_runtime_v1.cpp  plugin_runtime_v2.cpp  plugin_test_api.hpp  plugin_test_helpers.hpp  protocol_fuzz_harness.cpp  public_api_headers_compile.cpp  public_api_smoke.cpp  public_api_stable_header_scenarios.cpp  run_installed_package_consumer.cmake  test_admin_command_auth.cpp  test_core_metrics.cpp  test_core_net.cpp  test_gateway_resilience_controls.cpp  test_lua_runtime.cpp  test_lua_sandbox.cpp  test_plugin_chain_host.cpp  test_plugin_host.cpp  test_rudp_ack_window.cpp  test_rudp_engine.cpp  test_rudp_fallback.cpp  test_rudp_flow_control.cpp  test_rudp_handshake.cpp  test_rudp_retransmit.cpp  test_rudp_rollout_policy.cpp  test_script_watcher.cpp  test_security_compression.cpp  test_shared_library.cpp  test_trace_context.cpp  test_udp_bind_abuse_guard.cpp  test_udp_sequenced_metrics.cpp
tests/package/installed_consumer/: CMakeLists.txt  extensibility_main.cpp  main.cpp
tests/python/: run_stack_test.py  session_continuity_common.py  test_check_lua_build_toggle.py  test_load_balancing.py  verify_admin_api.py  verify_admin_auth.py  verify_admin_read_only.py  verify_chat.py  verify_chat_hook_behavior.py  verify_plugin_hot_reload.py  verify_plugin_rollback.py  verify_plugin_v2_fallback.py  verify_pong.py  verify_runtime_toggle_metrics.py  verify_script_hot_reload.py  verify_session_continuity.py  verify_session_continuity_restart.py  verify_soak_perf_gate.py  verify_whisper_cross_instance.py
tests/server/: chat_hook_dual_entrypoint.cpp  chat_hook_v2_only.cpp  test_chat_lua_bindings.cpp  test_chat_plugin_chain.cpp  test_chat_plugin_chain_v2.cpp  test_hook_auto_disable.cpp  test_lua_hook_integration.cpp  test_server_chat.cpp
(+272 files in other folders)
